--- a/launchpad-reporting/templates/layout.html
+++ b/launchpad-reporting/templates/layout.html
@@ -22,6 +22,7 @@
 
       <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
+          <img src="http://www.mirantis.ru/wp-content/themes/carrington-jam-1.4/img/logo.gif" width="5%" align="left" alt="Mirantis Logo">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -29,6 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+
           <a class="navbar-brand" href="/">Mirantis Projects QA Status</a>
           <a class="navbar-brand" href="/"></a>
           <a class="navbar-brand" href="/project/fuel">FUEL</a>
@@ -42,7 +44,6 @@
       </div>
     </div>
 
-    <img src="http://www.mirantis.ru/wp-content/themes/carrington-jam-1.4/img/logo.gif" alt="Mirantis Logo">
 
     <div class="container-fluid">
       <div class="row">
