--- a/launchpad-reporting/templates/layout.html
+++ b/launchpad-reporting/templates/layout.html
@@ -22,7 +22,7 @@
 
       <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
-          <img src="http://www.mirantis.ru/wp-content/themes/carrington-jam-1.4/img/logo.gif" width="5%" align="left" alt="Mirantis Logo">
+          <img src="http://www.mirantis.com/id/RasterMirantisLogo_HiRes_Tagline_Inverted.png" width="5%" align="left" alt="Mirantis Logo">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
