--- a/launchpad-reporting/templates/project_fuelmos.html
+++ b/launchpad-reporting/templates/project_fuelmos.html
@@ -16,19 +16,21 @@
     {% endfor %}
 </div>
 
-        {{ t }}
+
 <div class="table_wrapper">
     <table class="bug_statistic">
           <tr>
               <th rowspan="2">Subproject</th>
               <th colspan="3">FUEL</th>
               <th colspan="3">MOS</th>
-              <!--<th colspan="3">FUEL + MOS</th>-->
+              <th colspan="3">FUEL + MOS</th>
               <tr>
-                  {% for i in range(2) %}
+                  {% for i in range(3) %}
                       <td>done</td>
                       <td>total</td>
-                      <td>high, critical</td>
+                      {% if i < 2 %}
+                          <td>high, critical<br>(not done)</td>
+                      {%endif%}
                   {% endfor %}
               </tr>
         </tr>
@@ -38,12 +40,25 @@
                 <td>{{i}}</td>
                 <td><a href="https://bugs.launchpad.net/fuel/+bugs?field.searchtext=&orderby=-importance&field.status%3Alist=INVALID&field.status%3Alist=WONTFIX&field.status%3Alist=FIXCOMMITTED&field.status%3Alist=FIXRELEASED&field.milestone%3Alist={{ fuel_milestone_id }}&field.tag={{ i }} &field.tags_combinator=ANY&search=Search">{{items[i]["fuel"]["done"]}}</a></td>
                 <td><a href="https://bugs.launchpad.net/fuel/+bugs?field.searchtext=&orderby=-importance&field.status%3Alist=NEW&field.status%3Alist=INVALID&field.status%3Alist=WONTFIX&field.status%3Alist=CONFIRMED&field.status%3Alist=TRIAGED&field.status%3Alist=INPROGRESS&field.status%3Alist=FIXCOMMITTED&field.status%3Alist=FIXRELEASED&field.status%3Alist=INCOMPLETE_WITH_RESPONSE&field.status%3Alist=INCOMPLETE_WITHOUT_RESPONSE&field.milestone%3Alist={{ fuel_milestone_id }}&field.tag={{i}}&field.tags_combinator=ANY&search=Search">{{items[i]["fuel"]["total"]}}</a></td>
-                <td><a href="https://bugs.launchpad.net/fuel/+bugs?field.searchtext=&orderby=-importance&field.status%3Alist=NEW&field.status%3Alist=INVALID&field.status%3Alist=WONTFIX&field.status%3Alist=CONFIRMED&field.status%3Alist=TRIAGED&field.status%3Alist=INPROGRESS&field.status%3Alist=FIXCOMMITTED&field.status%3Alist=FIXRELEASED&field.status%3Alist=INCOMPLETE_WITH_RESPONSE&field.status%3Alist=INCOMPLETE_WITHOUT_RESPONSE&field.importance%3Alist=CRITICAL&field.importance%3Alist=HIGH&field.milestone%3Alist={{ fuel_milestone_id }}&field.tag={{i}}&field.tags_combinator=ANY&search=Search"">{{items[i]["fuel"]["high"]}}</a></td>
+                <td><a href="https://bugs.launchpad.net/fuel/+bugs?field.searchtext=&orderby=-importance&field.status%3Alist=NEW&field.status%3Alist=INVALID&field.status%3Alist=WONTFIX&field.status%3Alist=CONFIRMED&field.status%3Alist=TRIAGED&field.status%3Alist=INPROGRESS&field.status%3Alist=INCOMPLETE_WITH_RESPONSE&field.status%3Alist=INCOMPLETE_WITHOUT_RESPONSE&field.importance%3Alist=CRITICAL&field.importance%3Alist=HIGH&field.milestone%3Alist={{ fuel_milestone_id }}&field.tag={{i}}&field.tags_combinator=ANY&search=Search"">{{items[i]["fuel"]["high"]}}</a></td>
                 <td><a href="https://bugs.launchpad.net/mos/+bugs?field.searchtext=&orderby=-importance&field.status%3Alist=INVALID&field.status%3Alist=WONTFIX&field.status%3Alist=FIXCOMMITTED&field.status%3Alist=FIXRELEASED&field.milestone%3Alist={{ mos_milestone_id }}&field.tag={{ i }}&field.tags_combinator=ANY&search=Search">{{items[i]["mos"]["done"]}}</a></td>
                 <td><a href="https://bugs.launchpad.net/mos/+bugs?field.searchtext=&orderby=-importance&field.status%3Alist=NEW&field.status%3Alist=INVALID&field.status%3Alist=WONTFIX&field.status%3Alist=CONFIRMED&field.status%3Alist=TRIAGED&field.status%3Alist=INPROGRESS&field.status%3Alist=FIXCOMMITTED&field.status%3Alist=FIXRELEASED&field.status%3Alist=INCOMPLETE_WITH_RESPONSE&field.status%3Alist=INCOMPLETE_WITHOUT_RESPONSE&field.milestone%3Alist={{ mos_milestone_id }}&field.tag={{i}}&field.tags_combinator=ANY&search=Search">{{items[i]["mos"]["total"]}}</a></td>
-                <td><a href="https://bugs.launchpad.net/mos/+bugs?field.searchtext=&orderby=-importance&field.status%3Alist=NEW&field.status%3Alist=INVALID&field.status%3Alist=WONTFIX&field.status%3Alist=CONFIRMED&field.status%3Alist=TRIAGED&field.status%3Alist=INPROGRESS&field.status%3Alist=FIXCOMMITTED&field.status%3Alist=FIXRELEASED&field.status%3Alist=INCOMPLETE_WITH_RESPONSE&field.status%3Alist=INCOMPLETE_WITHOUT_RESPONSE&field.importance%3Alist=CRITICAL&field.importance%3Alist=HIGH&field.milestone%3Alist={{ mos_milestone_id }}&field.tag={{i}}&field.tags_combinator=ANY&search=Search">{{items[i]["mos"]["high"]}}</a></td>
+                <td><a href="https://bugs.launchpad.net/mos/+bugs?field.searchtext=&orderby=-importance&field.status%3Alist=NEW&field.status%3Alist=INVALID&field.status%3Alist=WONTFIX&field.status%3Alist=CONFIRMED&field.status%3Alist=TRIAGED&field.status%3Alist=INPROGRESS&field.status%3Alist=INCOMPLETE_WITH_RESPONSE&field.status%3Alist=INCOMPLETE_WITHOUT_RESPONSE&field.importance%3Alist=CRITICAL&field.importance%3Alist=HIGH&field.milestone%3Alist={{ mos_milestone_id }}&field.tag={{i}}&field.tags_combinator=ANY&search=Search">{{items[i]["mos"]["high"]}}</a></td>
+                <td>{{items[i]["fuel_mos"]["done"]}}</td>
+                <td>{{items[i]["fuel_mos"]["total"]}}</td>
             </tr>
         {% endfor %}
+            <tr>
+                <td><b>Summary:</b></td>
+                <td>{{ summary["fuel_done"] }}</td>
+                <td>{{ summary["fuel_total"] }}</td>
+                <td>{{ summary["fuel_high"] }}</td>
+                <td>{{ summary["mos_done"] }}</td>
+                <td>{{ summary["mos_total"] }}</td>
+                <td>{{ summary["mos_high"] }}</td>
+                <td><b>{{ summary["fuel_mos_done"] }}</b></td>
+                <td><b>{{ summary["fuel_mos_total"] }}</b></td>
+            </tr>
 
     </table>
 </div>
